<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/add_image"
    android:layout_width="140dp"
    android:layout_height="140dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:src="@drawable/eggs">

</androidx.appcompat.widget.AppCompatImageView>


    <EditText
        android:id="@+id/add_name"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toRightOf="@+id/add_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/name"
        >
    </EditText>

    <Button
        android:id="@+id/add_type"
        android:layout_height="70dp"
        android:layout_width="0dp"
        android:text="@string/eggs"
        app:layout_constraintTop_toBottomOf="@+id/add_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/add_image">

    </Button>


    <EditText
        android:id="@+id/add_calories"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_image"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/calories"
        >
    </EditText>

    <EditText
        android:id="@+id/add_proteins"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_type"
        app:layout_constraintLeft_toRightOf="@id/add_calories"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/proteins"
        >
    </EditText>

    <EditText
        android:id="@+id/add_glucids"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_calories"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/glucids"
        >
    </EditText>

    <EditText
        android:id="@+id/add_lipids"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_proteins"
        app:layout_constraintLeft_toRightOf="@id/add_glucids"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/lipids"
        >
    </EditText>
    <EditText
        android:id="@+id/add_saturated"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_glucids"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/saturated"
        >
    </EditText>
    <EditText
        android:id="@+id/add_fibers"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_lipids"
        app:layout_constraintLeft_toRightOf="@id/add_saturated"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/fibers"
        >
    </EditText>
    <EditText
        android:id="@+id/add_iron"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_saturated"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/iron"
        >
    </EditText>
    <EditText
        android:id="@+id/add_zinc"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_fibers"
        app:layout_constraintLeft_toRightOf="@id/add_iron"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/zinc"
        >
    </EditText>
    <EditText
        android:id="@+id/add_magnesium"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_iron"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/magnesium"
        >
    </EditText>
    <EditText
        android:id="@+id/add_manganese"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_zinc"
        app:layout_constraintLeft_toRightOf="@id/add_magnesium"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/manganese"
        >
    </EditText>
    <EditText
        android:id="@+id/add_om3"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_magnesium"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/om3"
        >
    </EditText>
    <EditText
        android:id="@+id/add_om6"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_manganese"
        app:layout_constraintLeft_toRightOf="@id/add_om3"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/om6"
        >
    </EditText>
    <EditText
        android:id="@+id/add_om9"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_om3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/om9"
        >
    </EditText>
    <Button
        android:id="@+id/add_mainvitamin"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/add_om6"
        app:layout_constraintLeft_toRightOf="@id/add_om9"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/empty"
        >
    </Button>

                          <!-- RADIOGROUPS -->

    <RadioGroup
        android:id="@+id/radioGroupVitamin"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/add_mainvitamin"
        app:layout_constraintRight_toRightOf="@id/add_mainvitamin"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/radioButton_vitamin_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_a" />

        <RadioButton
            android:id="@+id/radioButton__vitamin_b1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_b1" />

        <RadioButton
            android:id="@+id/radioButton__vitamin_b2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_b2" />

        <RadioButton
            android:id="@+id/radioButton__vitamin_b3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_b3"/>

        <RadioButton
            android:id="@+id/radioButton__vitamin_b5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_b5" />

        <RadioButton
            android:id="@+id/radioButton__vitamin_b6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_b6" />

        <RadioButton
            android:id="@+id/radioButton__vitamin_b8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_b8" />

        <RadioButton
            android:id="@+id/radioButton__vitamin_b9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_b9" />

        <RadioButton
            android:id="@+id/radioButton__vitamin_b12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_b12" />

        <RadioButton
            android:id="@+id/radioButton__vitamin_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_c" />

        <RadioButton
            android:id="@+id/radioButton__vitamin_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_d" />

        <RadioButton
            android:id="@+id/radioButton__vitamin_e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_e" />

        <RadioButton
            android:id="@+id/radioButton__vitamin_k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_k" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/add_type"
        app:layout_constraintRight_toRightOf="@id/add_type"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/radioButton_redMeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red_meat" />

        <RadioButton
            android:id="@+id/radioButton_whiteMeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/white_meat" />

        <RadioButton
            android:id="@+id/radioButton_seaFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sea_food" />

        <RadioButton
            android:id="@+id/radioButton_nuts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuts" />

        <RadioButton
            android:id="@+id/radioButton_cereals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cereals" />

        <RadioButton
            android:id="@+id/radioButton_vegetables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vegetables" />

        <RadioButton
            android:id="@+id/radioButton_fruits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fruits" />

        <RadioButton
            android:id="@+id/radioButton_dairy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dairy" />

        <RadioButton
            android:id="@+id/radioButton_eggs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eggs" />

        <RadioButton
            android:id="@+id/radioButton_supplements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/supplements" />

        <RadioButton
            android:id="@+id/radioButton_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meals" />
    </RadioGroup>

    <Button
        android:id="@+id/add_confirm"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="confirm">
    </Button>

    <Button
        android:id="@+id/add_exit"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/add_confirm"
        app:layout_constraintRight_toRightOf="parent"
        android:text="exit">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>